# eligere

./: .gitignore  GNU General Public License.txt  READ ME.txt  README.md
Database/: READ ME.txt  fuzzyAHP20160726.sql  fuzzyahp.sql  fuzzyahp20160719.sql
FAHPcore/: CMakeLists.txt  READ ME.txt  criteriarow.cpp  criteriarow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_criteriarow.cpp  moc_mainwindow.cpp  myclass.cpp  ui_mainwindow.h  util.cpp
FAHPcore-network/: CMakeLists.txt  READ ME.txt  criteriarow.cpp  criteriarow.h  main.cpp  mainwindow.h  ui_mainwindow.h  util.cpp
FuzzyAHPcore/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  READ ME.txt  Test.pro  Test.pro.user.38fac2d  criteriarow.cpp  criteriarow.h  eligereserver.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_criteriarow.cpp  moc_mainwindow.cpp  myclass.cpp  myclass.h  ui_mainwindow.h  util.cpp  util.h
FuzzyAHPcoreSocket/: CMakeLists.txt  READ ME.txt  eligereserver.cpp  eligereserver.h  mainwindow.cpp  mainwindow.ui  moc_criteriarow.cpp  moc_eligereserver.cpp  moc_mainwindow.cpp  myclass.h  util.h
WebApplication/: Q1.php  READ ME.txt  adminLogin.php  ajax.php  alternative.php  alternativeBis.php  complete.php  connection.php  create.php  database.php  delete.php  footer.php  functions.php  getCriteria.php  getDataFromDataBase.php  getPreferences.php  getSuitability.php  getSuitabilityGood.php  header.html  index.php  index.php~  index2.php  info.html  insertAlternative.php  insertAlternativeAndCriteria.php  insertData.php  insertQuestionnarie.php  insertQuestions.php  jobCategory.php  jobCategory.sql  logout.php  main.php  mainAdmin.php  read.php  result.php  showDataBase.php  showDataBase.php~  showDataElaborated.php  socket_connection.php  staticNavBar.php  (+2 more)
WebApplication/alternative/: create.php  delete.php  read.php  update.php
WebApplication/criteria/: create.php  delete.php  read.php  update.php
WebApplication/question/: create.php  delete.php  read.php  update.php
WebApplication/questionnarie/: create.php  delete.php  read.php  update.php
